[package]
name = "simple-encryptor"
version = "1.0.1"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
rand = "0.8.4"
sha3 = "0.10.6"
rpassword = "7.2.0"
base64 = "0.21.0"
argparse = "0.2.2"
enum-display = "0.1.3"

[profile.release]
strip = "symbols"
opt-level = 3